# luna_hub

./: .env.example  .gitignore  Cargo.toml  ConfigExample.toml
migrations/2022-04-02-173144_create_devices/: up.sql
src/: lib.rs  main.rs  schema.rs
src/configuration/: app.rs  conf.rs  db.rs  mod.rs  server.rs
src/models/: device.rs
src/repositories/: user_repository.rs
