[package]
name = "luna_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.12"
log = "0.4.16"
env_logger = "0.9.0"
actix-cors = "0.6.1"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
serde = "1.0.136"
serde_derive = "1.0.136"
toml = "0.5.8"
diesel_migrations = "1.4.0"